# DeckCrew

./: .env.example  .gitignore  .npmrc  README.ja.md  README.md  package-lock.json  package.json
.github/workflows/: pages.yml
backend/: pyproject.toml
backend/src/deckcrew/: main.py
backend/src/deckcrew/agent/: audience_persona.py  base.py  llm_agents.py  mock.py  mock_audience.py  mock_critic.py  models.py  prompt_builder.py  registry.py
backend/src/deckcrew/agent/prompts/: audience.md  groove.md  harmony.md
backend/src/deckcrew/agent/prompts/en/: critic.md  crowd.md
backend/src/deckcrew/agent/prompts/ja/: audience.md  critic.md  crowd.md  groove.md  harmony.md
backend/src/deckcrew/api/: audio.py  debug.py  event_bus.py  events.py  memory.py  session.py  stream.py  turn.py
backend/src/deckcrew/llm/: provider.py  registry.py
backend/src/deckcrew/memory/: base.py  local.py  models.py  preference.py  profile.py  registry.py
backend/src/deckcrew/music/: base.py  genres.py  lyria.py  mock.py  mood_derivation.py  params.py  prompt_composer.py  registry.py
backend/src/deckcrew/orchestrator/: auto_loop.py  conductor.py  config.py  meeting.py  models.py  repetition.py
backend/src/deckcrew/state/: models.py  store.py
backend/src/deckcrew/venue/: models.py  presets.py  time_resolver.py
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  previewData.ts  themes.ts  useAudio.ts  usePreview.ts  useSessionStream.ts  (+1 more)
scripts/: dev.sh
(+1 files in other folders)
