[project]
name = "deckcrew"
version = "0.0.0"
description = "AI DJ agent backend for DeckCrew"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "google-genai==1.62.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.3",
    "mypy==1.8.0",
    "pytest==8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deckcrew"]

[tool.ruff]
src = ["src"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
